# project22

./: .env.example  .gitignore  clean_chunk_test.py  cleanchunk.py  embeding.py  hwp2pdf.py  json2jsonl.py  len_page.py  main.py  pipeline.py  pyproject.toml  upstage_pdf_pipeline.py
RAG_LLM/: app.py  config.py  data_list.csv  main.py  requirements.txt
config/: config.yaml
data/parsed_json/: 대한장애인체육회_2025년 전국장애인체육대회 전산 및 시스템, 홈페이지 _parsed.json  서울특별시교육청_서울특별시교육청 지능정보화전략계획(ISP) 수립(2차) _parsed.json  인천공항운영서비스(주)_인천공항운영서비스㈜ 차세대 ERP시스템 구축 _parsed.json  한국농수산식품유통공사_농산물가격안정기금 정부예산회계연계시스템 _parsed.json
scripts/: hwp_to_pdf.py
src/: generator.py  indexer.py  loader.py  retriever.py
src/pipeline/: chunker.py
